--- a/uri.yml
+++ b/uri.yml
@@ -15,4 +15,4 @@
     - name: debug
       debug:
         #var: result_get_events_list
-        var: result_get_events_list.content
+        var: result_get_events_list.json
